--- a/neuralDecoder/configs/wandb/defaults.yaml
+++ b/neuralDecoder/configs/wandb/defaults.yaml
@@ -1,7 +1,7 @@
 ---
-enabled: false
+enabled: true
 setup:
-    project: hydra-example
-    entity:
+    project: bci
+    entity: cs224s-bci
     group:
     mode: online
